# FastAPI-Base-App

./: .gitignore  Dockerfile_netmonitor  LICENSE  README.md  docker-compose.yml  index_page_loader.sh  init_project.sh  init_single_network.sh  pyproject.toml  shop.sql
alertmanager/: alertmanager.yml
fastapi-application/: .env.template  Dockerfile  create_fastapi_app.py  log_conf.yaml  main.py  pyproject.toml
fastapi-application/actions/: create_superuser.py
fastapi-application/alembic/versions/: 2024_08_07_2023-8177e32cf823_modified_users_models.py  2024_08_07_2228-8a21a0ba53c3_added_phone_number_field.py  (+8 more)
fastapi-application/before_start_up/: check_env_file.py  check_python_version.py
fastapi-application/core/: config.py  redis_helper.py
fastapi-application/crud/: laptops.py  users.py
fastapi-application/middleware_related/: check_ip.py
fastapi-application/tests/: test_endpoints.py
fastapi-application/utils/: healthcheck.py
smtp_application/: .env.template  Dockerfile  main.py  pyproject.toml
smtp_application/common_logger/: logger_config.py
smtp_application/controllers/: send_controllers.py
smtp_application/core/: config.py
smtp_application/messages/: after_register.py  approved_verification.py  forgot_password.py  reset_password.py  verification_request.py  verify_token_sender.py  verify_user.py
smtp_application/service/: transport.py
smtp_application/templates/: after_register.html  forgot_password.html  index.html  password_reset.html  verification_approved.html  verification_request.html
smtp_application/utils/: healthcheck.py
(+197 files in other folders)
